[tool.poetry]
name = "greenbriermystery-1"
version = "0.1.0"
description = ""
authors = ["Austin <at.cottrill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^1.9"
thorpy = "^1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
